HelloUltraviolet/Fixtures/RejectedSource/Parsing/EnumCommaSeparator/Expected.uv
//! Expected diagnostic metadata for the EnumCommaSeparator rejected-source specimen.

expectedDiagnostic("E-SRC-0520", "req.EnumTopLevelCommaSeparatorRejected")
